<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".activities.SelectItemCovered">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="2dp"
            android:text="@string/insurance_name"
            android:textColor="#020202"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/insuranceName_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/poppins_light"
            android:padding="2dp"
            android:textSize="12sp"
            tools:text="XXX" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="2dp"
            android:text="@string/insurance_company_name"
            android:textColor="#020202"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/insuranceCompanyName_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/poppins_light"
            android:padding="2dp"
            android:textSize="12sp"
            tools:text="XXX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/step_1_select_the_option_s_below"
            android:textColor="#020202"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="0.8"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/insurance_class"
                        android:textColor="#020202"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/viewMore_Icon"
                        android:layout_width="wrap_content"
                        android:visibility="gone"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="0.2"
                        android:contentDescription="@string/more_information_icon"
                        android:src="@drawable/outline_info_black_24dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/insuranceClass_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Class A"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/insurance_item_covered"
                    android:textColor="#020202"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"/>

                    <CheckBox
                        android:id="@+id/itemCovered1_checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/all_drivers"
                        android:textSize="12sp"
                        android:visibility="gone"/>

                    <CheckBox
                        android:id="@+id/itemCovered2_checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/bodily_injury"
                        android:textSize="12sp"
                        android:visibility="gone"/>

                    <CheckBox
                        android:id="@+id/itemCovered3_checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/car_accessories"
                        android:textSize="12sp"
                        android:visibility="gone"/>

                    <CheckBox
                        android:id="@+id/itemCovered4_checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/legal_costs"
                        android:textSize="12sp"
                        android:visibility="gone"/>

                    <CheckBox
                        android:id="@+id/itemCovered5_checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/loss_or_damage_of_own_vehicle"
                        android:textSize="12sp"
                        android:visibility="gone"/>

                    <CheckBox
                        android:id="@+id/itemCovered6_checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/loss_or_damage_of_property"
                        android:textSize="12sp"
                        android:visibility="gone"/>

                    <CheckBox
                        android:id="@+id/itemCovered7_checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/personal_accidental_death"
                        android:textSize="12sp"
                        android:visibility="gone"/>

                    <CheckBox
                        android:id="@+id/itemCovered8_checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/wind_screen_cover"
                        android:textSize="12sp"
                        android:visibility="gone"/>
                    <!--<ListView
                    android:id="@+id/OptionItemCoveredListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/fragment_option_item_covered" />-->
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/back_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="5dp"
                android:text="@string/back"
                android:textColor="@color/gray_300"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/ConfirmAndProceed_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_medium"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/confirm_and_proceed"
                android:textColor="@color/Primary_300"
                app:backgroundTint="@color/white"
                app:strokeColor="@color/Primary_300"
                app:strokeWidth="1dp" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</ScrollView>