<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InsuranceCompanyModule.activities.AddInsCompanySuperAdmin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:id="@+id/lightBulb_Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:contentDescription="@string/minimalist_icon"
                android:src="@drawable/baseline_lightbulb_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="2dp"
                android:text="@string/please_fill_in_the_detail_below"
                android:textColor="#020202"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="2dp"
                android:text="@string/insurance_company_name"
                android:textColor="#020202"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/insuranceCompanyName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/please_enter_insurance_company_nameCA"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textPersonName"
                android:maxLength="50"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="2dp"
                    android:text="@string/insurance_company_logo"
                    android:textColor="#020202"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/browse_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/browse"
                    android:textColor="#FFFFFF"
                    app:backgroundTint="#0097A7" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:cardCornerRadius="60dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/companyLogo_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/insurance_company_logo_image_viewCA" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="2dp"
                android:text="@string/insurance_company_status"
                android:textColor="#020202"
                android:textSize="12sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/insCompanyStatus_rgb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/closed_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/closed"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/AvailableInsurance_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/available"
                    android:textSize="12sp" />
            </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/back_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="5dp"
                android:text="@string/resetCA"
                android:textColor="#0097a7"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/add_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/poppins_medium"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                app:backgroundTint="#0097A7" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>